<resources>
    <string name="app_name">"  ChildCareApp"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_main_client">MainClientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Menus For Admin -->
    <string name="m_home">Home</string>
    <string name="m_profile">Profile</string>
    <string name="m_add_child">Add a Child</string>
    <string name="m_entry_child">Entry Child</string>
    <string name="m_about">About</string>
    <string name="m_type_authen">Account Authentication</string>
    <string name="m_verify">Verify Accounts</string>
    <string name="m_all_accounts">All Accounts</string>

    <!--Add a Child Fragment -->
    <string name="fullname">Full name</string>
    <string name="nickname">Nick name</string>
    <string name="age">Age</string>
    <string name="nationality">Nationality</string>
    <string name="religion">Religion</string>
    <string name="fatheremail">Fathers email</string>
    <string name="motheremail">Mothers email</string>

    <string name="Entry">Please click the button to entry of a child.</string>

    <!--About Admin App-->
    <string name="app_info">Child Care Application</string>
    <string name="menu_info">Click the Menu. You will find all you need.</string>
    <string name="logout_info">You can logout your account on the left dropdown menu</string>
    <string name="pair_info">Before doing anything, you have to pair with your child</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
