<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/m_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/m_profile" />
        <item
            android:id="@+id/nav_entry"
            android:icon="@drawable/ic_entry"
            android:title="@string/m_entry_child" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/m_about" />
        <item
            android:id="@+id/nav_complain_box"
            android:icon="@drawable/ic_complain"
            android:title="Complain Box"/>
    </group>

    <item android:title="@string/m_type_authen">
        <menu>
            <item
                android:id="@+id/nav_add_child"
                android:icon="@drawable/ic_user_add"
                android:title="@string/m_add_child" />
            <item
                android:id="@+id/nav_all_accounts"
                android:icon="@drawable/ic_all_accounts"
                android:title="@string/m_all_accounts" />
            <item
                android:id="@+id/nav_verify_user"
                android:icon="@drawable/ic_verifiy_accounts"
                android:title="Verify Parent Accounts" />
            <item
                android:id="@+id/nav_verify_admin"
                android:icon="@drawable/ic_verifiy_accounts"
                android:title="Verify Admin Account"/>

        </menu>
    </item>

</menu>