<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.example.anonymous.childcareadminapp.DisplayChildProfileActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_child_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.00"
        android:contentDescription=""
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription"
        android:layout_below="@+id/progressBar2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/et_fullname_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/fullname"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_email_user"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_email_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/nickname"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_password"
        android:layout_toEndOf="@+id/progressBar2" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/age"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_gender"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_nationality_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/nationality"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_father_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/religion"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_nationality_child"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/et_father_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/fatheremail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_above="@+id/et_mother_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_mother_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:hint="@string/motheremail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:layout_marginBottom="21dp"
        android:layout_above="@+id/btn_update_child"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btn_update_child"
        style="?android:textAppearanceSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/btn_login"
        android:text="Update"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_create_id_card"
        style="?android:textAppearanceSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/btn_login"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/btn_update_child"
        android:layout_alignParentEnd="true"
        android:text="See ID CArd"
        android:layout_toEndOf="@+id/imageView2" />

    <!-- Link to Login Screen -->



</RelativeLayout>